...
                guard let self = self else { return }
                
                let username = loginView.usernameTextField.text ?? ""
                let password = loginView.passwordTextField.text ?? ""
                
                guard !username.isEmpty, !password.isEmpty else {
                    return showAlert(title: "Missing Fields", message: "Please enter username and password.")
                }
                
                isLoading.onNext(true)
                
                viewModel.authenticateUser(username: username, password: password)
                
...
