import UIKit
import RxSwift
import RxCocoa

final class ProductViewController: UIViewController {
    
    weak var coordinator: ProductCoordinator?
    private let viewModel = ProductViewModel()
    private let productDetailView = ProductDetailView()
    private let productsView = ProductsView()
    private let disposeBag = DisposeBag()
    
    private func setupNavigationBar() {
        let addButton = UIBarButtonItem(
            barButtonSystemItem: .add,
            target: self,
            action: #selector(didTapAdd)
        )
        
        navigationItem.rightBarButtonItem = addButton
        navigationItem.rightBarButtonItem?.style = .prominent
        navigationItem.rightBarButtonItem?.tintColor = AppColors.primaryColor
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "OpenCreateProductFormButton"
    }
    
    override func loadView() {
        view = productsView
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Products"
        
        setupNavigationBar()
        
        viewModel.delegate = self
        productsView.tableView.delegate = self
        
        productsView.tableView
            .register(
                ProductViewCell.self,
                forCellReuseIdentifier: ProductViewCell.reuseID
            )
        bindTableView()
        
        viewModel.fetchProducts()
    }
    
    // remove the gray highlight from the cell when we go back to the prev screen
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        
        if let selectedIndexPath = productsView.tableView.indexPathForSelectedRow {
            productsView.tableView.deselectRow(at: selectedIndexPath, animated: true)
        }
    }
    
    // MARK: - Bindings
    private func bindTableView() {
        viewModel.products
            .bind(to: productsView.tableView.rx.items(
                cellIdentifier: ProductViewCell.reuseID,
                cellType: ProductViewCell.self
            )) { _, product, cell in
                cell.configure(
                    title: product.title,
                    description: product.description,
                    image: UIImage(systemName: "shippingbox.fill")
                )
                cell.productImage.tintColor = .gray
                
                cell.accessibilityIdentifier = "productCell-\(product.id)"
                
                cell.loadImage(from: product.thumbnail)
                
            }
            .disposed(by: disposeBag)
        
        productsView.tableView.rx
            .modelSelected(Product.self)
            .subscribe(onNext: { [weak self] product in
                self?.coordinator?.showProductDetail(with: product)
            })
            .disposed(by: disposeBag)
    }

}


// MARK: - ProductsViewModelDelegate
extension ProductViewController: ProductsViewModelDelegate {
    func didErrorOccurr(error: Error) {
        print("error: \(error)")
        showAlert(title: "Error", message: "Something went wrong loading products.")
    }
}

// MARK: - ProductFormViewControllerDelegate
extension ProductViewController: ProductFormDelegate {
    func productForm(didUpdate product: Product) {
        viewModel.updateProduct(product)
    }
    func productForm(didCreate product: Product) {
        viewModel.addProduct(product)
    }
}


// MARK: - Action Buttons
extension ProductViewController {
    @objc private func didTapAdd() {
        // here's who to tell when you're done (me)
        coordinator?.presentCreateProduct(delegate: self)
    }
}

// MARK: - Context menu on long press
extension ProductViewController: UITableViewDelegate {
    
    func tableView(_ tableView: UITableView,
                   contextMenuConfigurationForRowAt indexPath: IndexPath,
                   point: CGPoint) -> UIContextMenuConfiguration? {
        
        let identifier = indexPath as NSIndexPath
        
        return UIContextMenuConfiguration(
            identifier: identifier,
            previewProvider: {
                return nil
            },
            actionProvider: { _ in
                let editAction = UIAction(
                    title: "Edit",
                    image: UIImage(systemName: "pencil"),
                    identifier: UIAction.Identifier("Edit"),
                    handler: {
                        [weak self] _ in
                        guard let self = self else { return }
                        let product = viewModel.currentProducts[indexPath.row]
                        
                        self.coordinator?.presentEditProduct(product, delegate: self)
                    }
                )
                
                let deleteAction = UIAction(
                    title: "Delete",
                    image: UIImage(systemName: "trash"),
                    identifier: UIAction.Identifier("Delete"),
                    
                    attributes: .destructive,
                    handler: {
                        [weak self] _ in
                        guard let self = self else { return }
//                        let product = self.productsViewModel.products[indexPath.row]
                        let product = viewModel.currentProducts[indexPath.row]
                        viewModel.deleteProduct(product, at: indexPath.row)
                    }
                )
                
                return UIMenu(title: "", children: [editAction, deleteAction])
            }
        )
    }
}
