...
    func configure(text: String, indexPath: IndexPath) {
        cellActionButton.setTitle(text, for: .normal)
        
        switch indexPath.item {
        case 0:
            backgroundImageView.image = UIImage(named: "productsBackground")
            cellActionButton.accessibilityIdentifier = "productButtonCell"
        case 1:
            backgroundImageView.image = UIImage(named: "rxswiftLogo")
            cellActionButton.accessibilityIdentifier = "rxSwiftButtonCell"
        case 2:
            backgroundImageView.image = UIImage(named: "recipesBackground")
            cellActionButton.accessibilityIdentifier = "recipesButtonCell"
...
