import XCTest

final class Login_Screen_UITests: XCTestCase {
    
    func testEmptyFieldsShowsMissingFieldsAlert() {
        let app = XCUIApplication()
        app.launchArguments = ["--uitesting"]
//        app.launchEnvironment = ["UIAnimationDragCoefficient": "10"]

        app.launch()
        
        app.buttons["loginButton"].tap()
        
        let alert = app.alerts["Missing Fields"]
        XCTAssertTrue(alert.waitForExistence(timeout: 2))

    }
    
    func testLogin() {
        let app = XCUIApplication()
        app.launchArguments = ["--uitesting"]
        
        app.launch()
        
        let username = app.textFields["usernameTextField"]
        let password = app.secureTextFields["passwordTextField"]
        let loginButton = app.buttons["loginButton"]
        
        username.tap()
        username.typeText("emilys")
        
        password.tap()
        password.typeText("emilyspass")
        
        
        app.coordinate(
            withNormalizedOffset: CGVector(dx: 0.5, dy: 0.25)
        ).tap()
        
        loginButton.tap()
        
        // Home screen
        let homeWelcome = app.staticTexts["homeWelcomeLabel"]
        
        XCTAssertTrue(
            homeWelcome.waitForExistence(timeout: 10)
        )
    }

//    override func setUpWithError() throws {
//        // Put setup code here. This method is called before the invocation of each test method in the class.
//
//        // In UI tests it is usually best to stop immediately when a failure occurs.
//        continueAfterFailure = false
//
//        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
//    }
//
//    override func tearDownWithError() throws {
//        // Put teardown code here. This method is called after the invocation of each test method in the class.
//    }
//
//    @MainActor
//    func testExample() throws {
//        // UI tests must launch the application that they test.
//        let app = XCUIApplication()
//        app.launch()
//
//        // Use XCTAssert and related functions to verify your tests produce the correct results.
//        // XCUIAutomation Documentation
//        // https://developer.apple.com/documentation/xcuiautomation
//    }
//
//    @MainActor
//    func testLaunchPerformance() throws {
//        // This measures how long it takes to launch your application.
//        measure(metrics: [XCTApplicationLaunchMetric()]) {
//            XCUIApplication().launch()
//        }
//    }
}
